# repofix-verified

./: .gitignore  pyproject.toml
examples/: README.md
examples/reproduction/: empty-header-bug.yaml
examples/tasks/: empty-header-bug.yaml
src/repofix/: cli.py
src/repofix/agent/: __init__.py  actions.py  interfaces.py  loop.py  prompts.py  reproduction_loop.py  state.py
src/repofix/execution/: __init__.py  approved_commands.py
src/repofix/models/: __init__.py  openai_agent.py  openai_patch.py
src/repofix/patching/: __init__.py  application.py  context.py  models.py  validator.py
src/repofix/reproduction/: __init__.py  models.py  post_patch.py  verifier.py
src/repofix/runners/: __init__.py  investigation.py  patch_application.py  patch_proposal.py  post_patch_reproduction.py  reproduction.py
src/repofix/tasks/: __init__.py  loader.py  spec.py
src/repofix/tools/: __init__.py  read_only.py
tests/integration/agent/: test_reproduction_agent_workflow.py
tests/integration/execution/: test_fixture_command_execution.py
tests/integration/models/: test_model_driven_investigation.py  test_model_driven_patch_proposal.py  test_model_driven_reproduction.py
tests/integration/patching/: test_fixture_patch_application.py  test_fixture_patch_proposal.py  test_patch_proposal_runner.py
tests/integration/reproduction/: test_fixture_post_patch_reproduction.py  test_fixture_reproduction.py
tests/integration/runners/: test_fixture_investigation.py
tests/integration/tools/: test_read_only_agent_loop.py
tests/unit/: test_cli.py
tests/unit/agent/: test_loop.py  (+3 more)
(+24 files in other folders)
